--- a/DrawCardGame/DrawCardGame.csproj
+++ b/DrawCardGame/DrawCardGame.csproj
@@ -14,6 +14,11 @@
     <None Remove="Images\card_dog.png" />
     <None Remove="Images\card_pikachu.png" />
     <None Remove="Images\card_rabbit.png" />
+    <None Remove="Images\placeholder.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.7" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,6 +35,9 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\card_rabbit.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\placeholder.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
