--- a/DrawCardGame/DrawCardGame.csproj
+++ b/DrawCardGame/DrawCardGame.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <None Remove="Assets\70cb140ab63a37e7d6e669d5ef1c698453520970.png" />
     <None Remove="Assets\box_animation.mp4" />
+    <None Remove="Assets\Carddraw.gif" />
     <None Remove="Images\card_AE86.png" />
     <None Remove="Images\card_bicycle.png" />
     <None Remove="Images\card_birthdaycake.png" />
@@ -46,6 +47,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.7" />
+    <PackageReference Include="WpfAnimatedGif" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -53,6 +55,9 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Content Include="Assets\box_animation.mp4">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\Carddraw.gif">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Resource Include="Images\card_AE86.png">
