--- a/WebExtensions/manifest.json
+++ b/WebExtensions/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Time Tracker",
+    "name": "ZenFlow",
     "version": "1.0",
-    "description": "Track webpage usage time with detailed information",
+    "description": "Track webpage usage time with detailed information for better productivity",
     "icons": {
         "16": "icons/icon-16.png",
         "48": "icons/icon-48.png",
@@ -10,7 +10,7 @@
     },
     "action": {
         "default_popup": "popup.html",
-        "default_title": "Time Tracker",
+        "default_title": "ZenFlow",
         "default_icon": {
             "16": "icons/icon-16.png",
             "48": "icons/icon-48.png",
@@ -37,3 +37,5 @@
         }
     ]
 }
+
+
